--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2506,107 +2506,107 @@ stories:
   domain: http://www.fhtimes.com/
   link: https://www.fhtimes.com/creative-marketing-agency-los-angeles/image_ef741cae-9e2e-11e9-b5fa-ff10fd1f8171.html
 images:
-- name: meadowbutterfly-meadow-butterfly-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-gan-vogh.jpg
-- name: supreme-court-supremecourt-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-plentiful.jpg
-- name: border-crossing-bordercrossing-far-away.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-far-away.png
-- name: blossombar-creativity-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
-- name: legal-statue-legalstatue-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-mucha-mult.jpg
-- name: yuma-bank-yuma-bak-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
-- name: dragon-desert-desert-dragon-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-jap-wav-pr.jpg
-- name: bluelake-purple-pond-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-38-67.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-- name: old-school-house-old-schoolhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-post-modern.jpg
-- name: sand-hand-sand-hand-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-really-hot.jpg
-- name: supreme-court-supremecourt-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
-- name: catacombs-catacombs-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-color.jpg
-- name: downtheline-downtheline-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-green-zuma.jpg
-- name: eduardo-eduardo-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-circuit.jpg
-- name: mosaic-face-mosaic-face-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-kand-two.jpg
-- name: stories-death-valley-national-park-dali-three-just-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-death-valley-national-park-dali-three-just-road.jpg
-- name: supreme-court-supremecourt-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-2-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
-- name: oldhotel-oldhotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alien-goggles.jpg
-- name: catacombs-catacombs-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-space-pizza.jpg
-- name: store-on-corner-store-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
-- name: cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-yellow-paper.jpg
-- name: art-museum-art-museum-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colored-circuits.jpg
-- name: aws-s3-stories-new-76-135-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-76-135-800-500-0-max-0-1--1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-marcel-duchamp.jpg
-- name: dragon-desert-desert-dragon-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-free-woman.jpg
-- name: scream-IMG_7319.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7319.jpg
-- name: old-granary-field-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
-- name: oldbarn-oldbarn-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-green-zuma.jpg
-- name: machine-learning-gun-patent.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-learning-gun-patent.jpg
-- name: white-house-whitehouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-diego-rivera1.jpg
-- name: aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-beach-rocks-currents-blue-circuit-5.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: old-door-lock-old-door-lock-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-- name: border-fence-border-fence-on-hill-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-brush.jpg
-- name: old-door-lock-old-door-lock-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colored-circuits.jpg
-- name: aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM-square.jpg
-- name: catacombs-catacombs-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-copper-circuit-2.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-attack-planes.jpg
-- name: trucksilo-trucksilo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-kandinsky-bv.jpg
-- name: nyc-flag-api-conversations-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
-- name: server-cloud-server-racks-clouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-hot-spicy.jpg
-- name: border-crossing-bordercrossing-crabapple.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crabapple.png
-- name: blossombar-neo-instinct-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-50-62.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit.jpg
-- name: catacombs-catacombs-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-clean-view.jpg
-- name: eduardo-eduardo-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-bright-sand.jpg
-- name: gypsy-wagon-gypsywagon-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-crabapple.jpg
+- name: gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+- name: castle-wall-DSC-0067-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crafty-painting.JPG
+- name: art-museum-art-museum-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-nazi-poster.jpg
+- name: aws-s3-stories-dragon-close-up-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dragon-close-up-yellow-collage.jpg
+- name: downtheline-downtheline-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
+- name: oldhouse-granaryfield-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
+- name: legal-statue-legalstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
+- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
+- name: windowmountain-window-mountain-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-graham-sutherland.jpg
+- name: power-lines-power-lines-empty-space-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
+- name: oldhouse-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
+- name: sand-hand-sand-hand-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-missle.jpg
+- name: aws-s3-meadow-meadow-bright-sand-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-meadow-meadow-bright-sand-still.jpg
+- name: downtheline-downtheline-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-pablo-blue.jpg
+- name: store-on-corner-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gred-mash.jpg
+- name: white-house-lawn-white-house-lawn-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-emily-carr.jpg
+- name: meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alien-goggles.jpg
+- name: berlinwall2-berlinwall-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
+- name: razorwire-DSC-0080-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crunch-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-china-prop.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
+- name: subway-subway-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kand-two.jpg
+- name: capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-norman-rockwell-ruby-bridges.jpg
+- name: store-on-corner-store-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
+- name: trucksilo-trucksilo-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
+- name: stories-36745180055-45289923eb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36745180055-45289923eb-z.jpg
+- name: old-door-lock-old-door-lock-2-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-horiz-circuit.jpg
+- name: amusement-park-amusement-park-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sunday.jpg
+- name: castle-wall-DSC-0067-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-rainbow-festival.JPG
+- name: amusement-park-amusement-park-2-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-yellow-paper.jpg
+- name: curtain-curtain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crunch-paper.jpg
+- name: mistywoods-babyfoot-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-yellow-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dali-two.jpg
+- name: mistywoods-babyfoot-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
+- name: store-on-corner-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-diego-rivera1.jpg
+- name: white-house-lawn-white-house-window-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-light-dali.jpg
+- name: bordercrossing-bordercrossing-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gan-vogh.jpg
+- name: legal-statue-legalstatue-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
+- name: blossombar-blossombar-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blossombar-still-2560.jpg
+- name: old-cabin-oldcabin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-kand-two.jpg
+- name: store-on-corner-store-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-aqua.jpg
+- name: server-cloud-server-racks-clouds-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
+- name: server-cloud-server-racks-door-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-soul.jpg
+- name: containership-containership-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crafty-painting.jpg
+- name: downtown-trucksilo-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-monet-one.jpg
+- name: oldroad-old-road-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
+- name: beach-rocks-beach-rocks-currents-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-china-prop.jpg
+- name: catacombs-catacombs-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-propaganda-leaflets.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-post-modern.jpg
+- name: aws-s3-stories-internet-gauages-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-internet-gauages-3.jpg
 ---
 Trump Asking Americans To 'stay True To Our Cause'.&nbsp;Deceased Pets Recovered From Plane In Florida River.&nbsp;Man Tied To Ammo Smuggling Case Pleads Guilty.&nbsp;Put A Fork In It U2026 Or A Jackknife.&nbsp;YIIK Tried To Be A postmodern RPG, But Was Just A Frustrating Mess.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;Hit And Run Investigation Continues.&nbsp;Dallas Tin Man Is A True Man Of The Blues.&nbsp;
